internal-site.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: internal-site-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: internal-site
  template:
    metadata:
      labels:
        app: internal-site
    spec:
      containers:
        - name: internal-site
          image: gowtham47/internal-site:latest
