vulnado.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vulnado-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vulnado
  template:
    metadata:
      labels:
        app: vulnado
    spec:
      containers:
        - name: vulnado
          image: gowtham47/vulnado:latest
          ports:
            - containerPort: 8081
